<package format="3">
  <name>realtime_tools</name>
  <version>1.15.0</version>
  <description>Contains a set of tools that can be used from a hard
    realtime thread, without breaking the realtime behavior.</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="gennaro.raiola@iit.it">Gennaro Raiola</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/realtime_tools</url>
  <url type="bugtracker">https://github.com/ros-controls/realtime_tools/issues</url>
  <url type="repository">https://github.com/ros-controls/realtime_tools/</url>

  <author email="sglaser@willowgarage.com">Stuart Glaser</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_export_depend>rmw</build_export_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>rosidl_generator_cpp</build_depend>
  <build_depend>rosidl_typesupport_c</build_depend>
  <build_depend>rosidl_typesupport_cpp</build_depend>
  <build_export_depend>builtin_interfaces</build_export_depend>
  <build_export_depend>rcl_interfaces</build_export_depend>
  <build_export_depend>rosgraph_msgs</build_export_depend>
  <build_export_depend>rosidl_generator_cpp</build_export_depend>
  <build_export_depend>rosidl_typesupport_c</build_export_depend>
  <build_export_depend>rosidl_typesupport_cpp</build_export_depend>
  
  <depend>rclcpp</depend>
  <depend>rcl_yaml_param_parser</depend>
  <depend>rmw_implementation</depend>

  <exec_depend>ament_cmake</exec_depend>
  <build_depend>rclcpp_lifecycle</build_depend>

  <build_export_depend>actionlib</build_export_depend>

  <test_depend>actionlib</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  
</package>
